--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "font-awesome": "^4.7.0",
     "immutable": "^3.8.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -13,7 +14,6 @@
     "react-scripts": "1.0.11",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
-    "redux-immutablejs": "0.0.8",
     "redux-localstorage": "^0.4.1",
     "redux-saga": "^0.15.6"
   },
