--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - 8
 install:
   - npm i
-  - pip3 install awscli
+  - python3 -m pip install awscli
 after_success:
   - npm run build
 deploy:
