--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: node_js
 node_js:
   - 8
+addons:
+  apt:
+    packages:
+      - python3
+      - python3-pip
 install:
   - npm i
-  - python3 -m pip install awscli
+  - pip3 install awscli
 after_success:
   - npm run build
 deploy:
