--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.1.2",
     "react-scripts-ts": "2.8.0",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-localstorage": "^0.4.1",
     "redux-saga": "^0.15.6"
   },
@@ -24,6 +25,9 @@
     "@types/jest": "^21.1.8",
     "@types/node": "^8.0.53",
     "@types/react": "^16.0.25",
-    "@types/react-dom": "^16.0.3"
+    "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.14",
+    "@types/redux-devtools": "^3.0.42",
+    "@types/webpack-env": "^1.13.2"
   }
 }
