--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
@@ -40,6 +41,8 @@
     "redux": "^3.7.2",
     "redux-localstorage": "^0.4.1",
     "redux-saga": "^0.15.6",
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
