Fix tests by not using webpack alias @ for src
But the Jest configuration still needs to be fixed.

--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
     ],
     "moduleNameMapper": {
-      "^react-native$": "react-native-web"
+      "^react-native$": "react-native-web",
+      "^@$": "<rootDir>/src"
     },
     "moduleFileExtensions": [
       "web.js",
