--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash": "^4.17.4",
     "moment": "^2.20.0",
     "node-sass": "^4.7.2",
     "object-assign": "4.1.1",
